--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 		<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 	</ul>
 </div>
+
 <!-- end menu mobile -->
 
 
@@ -109,57 +110,18 @@
 	</div>
 </div>
 
+
+
+
+
 <div class="container-wide">
-		<div class="flex-grid-three" >
 
 	<div class="col-gutter">
-	<h1> Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br>Art and design literally flows in my blood, since my grandpa in Milan was a graphic designer around the ‘60. </h1> 
-	<img src="assets/img/Nonno_C.jpg" class="img-fluid images-shadow">
-<h1> I am passionate and driven about creating and designing. I love the challenges that each new project brings. For me, every shape, every font and every color, must be thoroughly explored in order to find the client their winning combination.</h1> 
-</div>
-
-
-<div class="col-gutter" >
-	<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>TYPE</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-
-</div>
-
-<div class="col-gutter">
- 
-<a href="../portfolio/logo.html">
-				<img src="assets/img/portfolio-logo.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>LOGO</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/logo.html"></a>
-		</div> 
-
-
-
-
-
-</div> 
-
-<div class="container-wide">
-
-	
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
 			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-setup.png"  
+				<img src="assets/img/typehome.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>TYPE</h3>
+			<h3></h3>
 			<p> 
 				<a class="fancy-link" href="" target="_blank"></a> </p>
 			<a class="" href="../portfolio/type.html"></a>
@@ -167,10 +129,10 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/logo.html">
-				<img src="assets/img/portfolio-logo.jpg"  
+				<img src="assets/img/logohome.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3>LOGO</h3>
+			<h3></h3>
 			<p> 
 				<a class="fancy-link" href="" target="_blank"></a> </p>
 			<a class="" href="../portfolio/logo.html"></a>
@@ -178,31 +140,24 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/packaging.html">
-				<img src="assets/img/portfolio-pack.jpg"  
+				<img src="assets/img/packhome.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> PACKAGING </h3>
+			<h3>  </h3>
 			<p> 
 				<a class="fancy-link" href="" target="_blank"></a> </p>
 			<a class="" href="../portfolio/packaging.html"></a>
 		</div>		
 
-</div>
 
-
-
-<div class="container">
 
 	
-
-	<div class="flex-grid-three" >
-
 		<div class="col-gutter">
 			<a href="../portfolio/editorial.html">
-				<img src="assets/img/portfolio-Editorial.jpg"  
+				<img src="assets/img/Editorialhome.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> EDITORIAL </h3>
+			<h3>  </h3>
 			<p> 
 				<a class="fancy-link" href="" target="_blank"></a> </p>
 			<a class="" href="../portfolio/editorial.html"></a>
@@ -210,66 +165,19 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/ADV.html">
-				<img src="assets/img/portfolio-ADV.jpg"  
+				<img src="assets/img/ADVhome.jpg"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
-			<h3> ADV </h3>
+			<h3>  </h3>
 			<p> 
 				<a class="fancy-link" href="" target="_blank"></a> </p>
 			<a class="" href="../portfolio/ADV.html"></a>
 		</div>		
 
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
+	
 </div>
 
-<div class="container">
-
-	
-
-	<div class="flex-grid-three" >
-
-		<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
-
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/portfolio-costr.jpg"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<h3>under construction</h3>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>		
+<div class="container">		
 
 </div>
 
