--- a/portfolio/index-1.html
+++ b/portfolio/index-1.html
@@ -204,9 +204,9 @@
 		</div><!-- /column -->
 
 		<div class="col-gutter">
-			<h4>ABOUT ME</h4>
-			<p>Hi, I'm Mary Smith. I'm a web designer and developer.</p>
-			<p>I created this website to showcase some of the projects I have created.</p>
+			<h4> LOVE YOU </h4>
+			<p></p>
+			<p></p>
 		</div><!-- /column -->
 
 		<div class="col-gutter">
