--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -57,19 +57,20 @@
 
 </head>
 
-<body>
+<body background="">
 
 <!-- begin menu mobile -->
 
 <div class="container-menu-bar-mobile menu-mobile-transparent menu-mobile-sticky">
 	
-	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
 		<div class="bar2"></div>
 		<div class="bar3"></div>
 	</div>
-</div>
+	</div>
+
+
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
@@ -118,7 +119,7 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/type.html">
-				<img src="assets/img/typehome.jpg"  
+				<img src="assets/img/typehome.png"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
 			<h3></h3>
@@ -129,7 +130,7 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/logo.html">
-				<img src="assets/img/logohome.jpg"  
+				<img src="assets/img/logohome.png"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
 			<h3></h3>
@@ -140,7 +141,7 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/packaging.html">
-				<img src="assets/img/packhome.jpg"  
+				<img src="assets/img/packhome.png"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
 			<h3>  </h3>
@@ -154,7 +155,7 @@
 	
 		<div class="col-gutter">
 			<a href="../portfolio/editorial.html">
-				<img src="assets/img/Editorialhome.jpg"  
+				<img src="assets/img/Editorialhome.png"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
 			<h3>  </h3>
@@ -165,7 +166,7 @@
 
 	<div class="col-gutter">
 			<a href="../portfolio/ADV.html">
-				<img src="assets/img/ADVhome.jpg"  
+				<img src="assets/img/ADVhome.png"  
 				class="img-fluid images-shadow"  alt="portfolio careers summit">
 			</a>
 			<h3>  </h3>
@@ -207,13 +208,11 @@
 		</div><!-- /column -->
 
 			<div class="col-gutter">
-			<h4>ABOUT ME</h4>
-			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
-			I strive to master the art of all mediums of communications and advertising. 
-			<br>I love the challenges that each new project brings. 
-			</p>
-			
-		</div><!-- /column -->
+			 
+			<h4> LOVE YOU </h4>			
+		</div>
+
+		<!-- /column -->
 
 		<div class="col-gutter">
 
