--- a/portfolio/packaging.html
+++ b/portfolio/packaging.html
@@ -147,10 +147,8 @@
 		</div><!-- /column -->
 
 		<div class="col-gutter">
-			<h4>ABOUT ME</h4>
-			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
-			I strive to master the art of all mediums of communications and advertising. 
-			<br>I love the challenges that each new project brings. 
+			<h4> LOVE YOU </h4>
+			<p>
 			</p>
 			
 		</div><!-- /column -->
