--- a/portfolio/packaging.html
+++ b/portfolio/packaging.html
@@ -60,18 +60,19 @@
 
 <div class="container-menu-bar-mobile menu-mobile-transparent menu-mobile-sticky">
 	
-	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
 		<div class="bar2"></div>
 		<div class="bar3"></div>
 	</div>
-</div>
+	</div>
+
+
 
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
 		<li><a href="../portfolio/index.html">Home</a></li>
-		<li><a href="index.html">Portfolio</a></li>
+		<li><a href="../portfolio/whoIam.html"> WhoIam </a></li>
 		<li><a href="../privacy.html">Privacy</a></li>
 		<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 	</ul>
@@ -87,7 +88,7 @@
 	<div class="item-menu">
 		<ul>
 			<li><a href="../portfolio/index.html">Home</a></li>
-			<li><a href="index.html">Portfolio</a></li>
+			<li><a href="../portfolio/whoIam.html"> WhoIam </a></li>
 			<li><a href="../privacy.html">Privacy</a></li>
 			<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 		</ul>
@@ -140,9 +141,10 @@
 
 			<p><i class="fa fa-home"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
 
-			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
+			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/whoIam.html">WhoIam</a></p>
 
 			<p><i class="fa fa-lock"></i>&nbsp;&nbsp;<a href="../privacy.html">Privacy</a></p>
+
 		
 		</div><!-- /column -->
 
