--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -75,7 +75,7 @@
 <div class="container-menu-options-mobile menu-mobile-dark">
 	<ul>
 		<li><a href="../portfolio/index.html">Home</a></li>
-		<li><a href="index.html">Portfolio</a></li>
+		<li><a href="../portfolio/whoIam.html"> WhoIam </a></li>
 		<li><a href="../privacy.html">Privacy</a></li>
 		<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 	</ul>
@@ -92,7 +92,7 @@
 	<div class="item-menu">
 		<ul>
 			<li><a href="../portfolio/index.html">Home</a></li>
-			<li><a href="index.html">Portfolio</a></li>
+			<li><a href="../portfolio/whoIam.html"> WhoIam </a></li>
 			<li><a href="../privacy.html">Privacy</a></li>
 			<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 		</ul>
@@ -201,11 +201,15 @@
 
 			<p><i class="fa fa-home"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
 
-			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
+			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/whoIam.html">WhoIam</a></p>
 
 			<p><i class="fa fa-lock"></i>&nbsp;&nbsp;<a href="../privacy.html">Privacy</a></p>
 		
-		</div><!-- /column -->
+		</div>
+
+
+
+		<!-- /column -->
 
 			<div class="col-gutter">
 			 
