--- a/base-6.html
+++ b/base-6.html
@@ -8,7 +8,7 @@
   
   <title>Responsive web page with highlighted boxes</title>
   <meta name="description" content="A sample responsive web page with examples of text in highlighted boxes.">
-  <meta name="author" content="Audrey Brewer">
+  <meta name="author" content="Filippo Ferrero">
   
   <link href="base-6.css" rel="stylesheet">
   
@@ -17,13 +17,13 @@
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142017731-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-50714507-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-142017731-1');
+    gtag('config', 'UA-50714507-1');
 </script>
 </head>
 
