--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
 <div class="container-menu-bar-mobile menu-mobile-dark menu-mobile-sticky">
 	<div class="item-logo">
-		<img src="" alt="logo">
+	
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -78,9 +78,7 @@
 <!-- begin menu desktop -->
 <div class="container-menu-desktop menu-desktop-dark menu-desktop-sticky">
 	<div class="item-logo">
-		<a href="">
-			<img src="" alt="logo">
-		</a>
+	
 	</div>
 	<div class="item-menu">
 		<ul>
@@ -153,33 +151,41 @@
 	<div class="flex-grid-footer">
 
 		<div class="col-gutter">
+
 			<h4>SITE MAP</h4>
-			<p><i class="fa fa-home" aria-hidden="true"></i>&nbsp;&nbsp;<a href="index.html">Home</a></p>
-			<p><i class="fa fa-file" aria-hidden="true"></i>&nbsp;&nbsp;<a href="portfolio/index.html">Portfolio</a></p>
-			<p><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;&nbsp;<a href="privacy.html">Privacy</a></p>
+
+			<p><i class="fa fa-home"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
+
+			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
+
+			<p><i class="fa fa-lock"></i>&nbsp;&nbsp;<a href="../privacy.html">Privacy</a></p>
+		
 		</div><!-- /column -->
 
-		<div class="col-gutter">
-			<h4>ABOUT ME</h4>
-			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
-			I strive to master the art of all mediums of communications and advertising. 
-			<br>I love the challenges that each new project brings. 
-			</p>
-		</div><!-- /column -->
+			<div class="col-gutter">
+			 
+			<h4> LOVE YOU </h4>			
+		</div>
 
+		<!-- /column -->
 
 		<div class="col-gutter">
+
 			<h4>CONTACT</h4>
+
 			<p><i class="fa fa-envelope"></i>&nbsp;&nbsp;<a href="mailto:filferrero@gmail.com">Email</a></p>
 
 			<p><i class="fa fa-github-square"></i>&nbsp;&nbsp;<a href="https://github.com/filferrero/filferrero.github.io" target="_blank">GitHub</a></p>
 
 			<p><i class="fa fa-linkedin"></i>&nbsp;&nbsp;<a href="https://www.linkedin.com/in/filippo-ferrero-99670257/" target="_blank">Linkedin</a></p>
+
 		</div><!-- /column -->
 
 	</div><!-- /flexgrid -->
 	
 </div> <!-- /footer -->
+
+
 
 
 
