--- a/privacy.html
+++ b/privacy.html
@@ -35,7 +35,7 @@
 
 <div class="container-menu-bar-mobile menu-mobile-dark menu-mobile-sticky">
 	<div class="item-logo">
-		<a href="index.html"><img  alt="logo"></a>
+		
 	</div>
 	<div class="item-icon">
 		<div class="bar1"></div>
@@ -176,16 +176,17 @@
 
 		<div class="col-gutter">
 			<h4>SITE MAP</h4>
-			<p><i class="fa fa-home" aria-hidden="true"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
-			<p><i class="fa fa-file" aria-hidden="true"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
-			<p><i class="fa fa-lock" aria-hidden="true"></i>&nbsp;&nbsp;<a href="privacy.html">Privacy</a></p>
+
+			<p><i class="fa fa-home"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Home</a></p>
+
+			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/index.html">Portfolio</a></p>
+
+			<p><i class="fa fa-lock"></i>&nbsp;&nbsp;<a href="../privacy.html">Privacy</a></p>
 		</div><!-- /column -->
 
 		<div class="col-gutter">
-			<h4>ABOUT ME</h4>
-			<p>Highly ambitious and extremely talented graphic designer bringing with me over ten years of Italian International experience as well as continued education to my role. <br> Art and design literally flows in my blood. 
-			I strive to master the art of all mediums of communications and advertising. 
-			<br>I love the challenges that each new project brings. 
+			<h4> LOVE YOU </h4>
+			<p>
 			</p>
 		</div><!-- /column -->
 
