--- a/portfolio/presentation.html
+++ b/portfolio/presentation.html
@@ -10,7 +10,7 @@
 
 	<meta name="author" content="Filippo Ferrero">
 
-	<link rel="stylesheet" href="assets/css/portfolio-2.css">
+	<link rel="stylesheet" href="assets/css/presentation-digital.css">
 
 	<style>
 		p.note { text-align:center; margin-bottom:32px }
@@ -18,10 +18,6 @@
 
 	<!-- Link to icons for Font Awesome 4 -->
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-	<link href="https://fonts.googleapis.com/css?family=Hepta+Slab&display=swap" rel="stylesheet">
-
-	<link href="https://fonts.googleapis.com/css?family=Tangerine&display=swap" rel="stylesheet"> 
 
 	<!-- Cookie consent code-->
 	<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" />
@@ -58,7 +54,7 @@
 
 </head>
 
-<body background="" >
+<body>
 
 <!-- begin menu mobile -->
 
@@ -81,7 +77,6 @@
 		<li><a href="../contact.html" class="btn-solid btn-rounded">Get in touch</a></li>
 	</ul>
 </div>
-
 <!-- end menu mobile -->
 
 
@@ -107,182 +102,32 @@
 
 <div class="hero-block-5">
 	<div class="full">
-		<h1>  </h1>
-		<h2></h2>
-	</div>
-</div>
-
-
-<div class="container-wide">
-
-	<div class="col-gutter">
-		<h3> </h3>
-
-		</div>
-	</div>
-
-
-<div class="container-wide">
-
-<div class="flex-grid-three" >
-	
-	<div class="col-gutter">
-			<a href="../portfolio/type.html">
-				<img src="assets/img/typehome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/type.html"></a>
-		</div>
-
-	<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> The beginning is the most important part of the work.
-
-														<h3>Plato</h3> </h1>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/logo.html">
-				<img src="assets/img/logohome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/logo.html"></a>
-		</div>
-	
-	</div>
-
-
-<div class="flex-grid-three" >
-
-<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> Choose a job you love and you will never have to work a day in your life.
-				<h3>Confucius</h3> </h1>
-		</div>
-
-
-<div class="col-gutter">
-			<a href="../portfolio/packaging.html">
-				<img src="assets/img/packhome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/packaging.html"></a>
-		</div>		
-
-<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> Work saves us from three great evils: boredom, vice and need.
-
-
-				<h3>Voltaire</h3> </h1>
-		</div>		
-
-
 		
-</div>	
-
-<div class="flex-grid-three" >	
-
-	<div class="col-gutter">
-			<a href="../portfolio/editorial.html">
-				<img src="assets/img/Editorialhome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/editorial.html"></a>
-		</div>		
-
-<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> Love and work are the cornerstones of our humanness.
-			<h3>Sigmund Freud</h3> </h1>
-		</div>
-
-	<div class="col-gutter">
-			<a href="../portfolio/ADV.html">
-				<img src="assets/img/ADVhome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/ADV.html"></a>
-		</div>		
-
-	
-
-
-
+	</div>
 </div>
 
-<div class="flex-grid-three" >
+<div class="container">
+    <h3>  The last step but not the less important is how we are going to show our idea.
+    <br> All the material has to be been well prepared before the big day. <br> Be sure that everything is going to work for keeping the client attention is an art. <br>Chose the right support and prepare all the material is one of my best skills.</h3>
+</div>
 
-<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> Thinking is the hardest work there is, which is probably the reason why so few engage in it.
-			<h3>Henry Ford</h3> </h1>
-		</div>
+<div class="container"> <h4>  </h4> </div>
+
+<div class= "">
+<img src="assets/img/Pressamplea.jpg" style="width:100%" alt=""  >
+</div>
 
 
-<div class="col-gutter">
-			<a href="../portfolio/digital.html">
-				<img src="assets/img/digitalhome.png"  
-				class="img-fluid images-shadow"  alt="portfolio careers summit">
-			</a>
-			<p> 
-				<a class="fancy-link" href="" target="_blank"></a> </p>
-			<a class="" href="../portfolio/digital.html"></a>
-		</div>		
+<div class="container"> <h4>  </h4> </div>
 
-<div class="col-gutter">
-			<a href="">
-				<img src=""  
-				class=""  alt="">
-			</a>
-			<h1> A work is perfectly finished only when nothing can be added and nothing taken away.
-
-			<h3>Joseph Joubert</h3> </h1>
-		</div>
-
+<div class= "">
+<img src="assets/img/Pressampleaa.jpg" style="width:100%" alt=""  >
 </div>
 
 
 
 
 	
-</div>
-
-<div class="container">		
-
-</div>
-
-
-<!--- /flex-grid -->
-
-<!--- /container -->
-
-<!--- /flex-grid -->
 
 </div><!--- /container -->
 
@@ -299,19 +144,16 @@
 			<p><i class="fa fa-file"></i>&nbsp;&nbsp;<a href="../portfolio/whoIam.html">WhoIam</a></p>
 
 			<p><i class="fa fa-lock"></i>&nbsp;&nbsp;<a href="../privacy.html">Privacy</a></p>
+
 		
-		</div>
+		</div><!-- /column -->
 
-
-
-		<!-- /column -->
-
-			<div class="col-gutter">
-			 
-			<h4> LOVE YOU </h4>			
-		</div>
-
-		<!-- /column -->
+		<div class="col-gutter">
+			<h4> LOVE YOU </h4>
+			<p>
+			</p>
+			
+		</div><!-- /column -->
 
 		<div class="col-gutter">
 
